--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 
 .card {
     width: 300px;
-    height: 400px;
+    height: 300px;
     margin: 20px;
     text-align: center;
+    border: 1px solid grey;
 }
 
 .card img {
