--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     height: 300px;
     margin: 20px;
     text-align: center;
-    border: 1px solid grey;
+    border: 1px solid black;
 }
 
 .card img {
