--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .card {
     width: 300px;
-    height: 300px;
+    height: auto;
     margin: 20px;
     text-align: center;
     border: 1px solid grey;
