--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 60px;
+    margin-top: 50px;
 }
 
 .card {
@@ -9,7 +11,7 @@
     height: auto;
     margin: 20px;
     text-align: center;
-    border: 1px solid black;
+    border: 4px solid black;
 }
 
 .card img {
@@ -26,4 +28,5 @@
 .card p {
     margin-top: 10px;
     font-size: 14px;
+    padding: 10px;
 }
