--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     justify-content: center;
     margin-bottom: 60px;
     margin-top: 50px;
+    background-color: lightblue;
 }
 
 .card {
@@ -11,7 +12,6 @@
     height: auto;
     margin: 20px;
     text-align: center;
-    border: 4px solid black;
 }
 
 .card img {
@@ -29,4 +29,9 @@
     margin-top: 10px;
     font-size: 14px;
     padding: 10px;
+}
+h1 {
+    text-align: center;
+    padding-top: 30px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
