--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 
 .card h2 {
     margin-top: 20px;
+    font-weight: 600;
 }
 
 .card p {
@@ -34,4 +35,6 @@ h1 {
     text-align: center;
     padding-top: 30px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 800;
 }
+
