--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 60px;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: lightblue;
+    border-radius: 10px;
 }
 
 .card {
