--- a/style.css
+++ b/style.css
@@ -37,5 +37,6 @@ h1 {
     padding-top: 30px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 800;
+    text-decoration-line: underline;
 }
 
