--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ h1 {
     text-decoration-line: underline;
 }
 
-.container2 img {
-    width: 90%;
-    padding-left: 120px;
+body {
+    background-image: ;
 }
